[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koalacode"
version = "0.1.0"
description = "A toy programming language in Python"
authors = [
  { name = "Krishna Gupta", email = "krishnagupta5672@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
koalacode = "koalacode.cli:main"

[tool.setuptools]
packages = ["koalacode"]
